sampler/chain/projects/litiengine/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/util/io/URLAdapter.java:57: error: [NullAway] (INDEX= 349) (Covered) returning @Nullable expression from method with @NonNull return type
      return null;
      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/MapUtilities.java:290: error: [NullAway] (INDEX= 238) (Covered) returning @Nullable expression from method with @NonNull return type
      return null;
      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/gui/GuiProperties.java:16: error: [NullAway] (INDEX= 471) (Covered) @NonNull static field defaultFont not initialized
  private static Font defaultFont;
                      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/ILayerList.java:73: error: [NullAway] (INDEX= 71) (Covered) returning @Nullable expression from method with @NonNull return type
    return layer.orElse(null);
    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/sound/SoundEngine.java:113: error: [NullAway] (INDEX= 250) (Covered) passing @Nullable parameter 'null' where @NonNull is required
    return playMusic(track, null, false, true);
                            ^

	(see http://t.uber.com/nullaway )
